Closed Bug 76091 Opened 23 years ago Closed 23 years ago

leak increase from one line XBL change

Categories

(Core :: Security: CAPS, defect, P1)

x86
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla0.9

People

(Reporter: dbaron, Assigned: dbaron)

Details

(Keywords: memory-leak, Whiteboard: [tind-mlk])

Attachments

(2 files)

DESCRIPTION:  blake's one line change to
themes/classic/global/win/classicBindings.xml revision 1.25 caused a leak
increase around 2K on tinderbox.  Since tinderbox leaks are going up and down
so much, here are the differences in leaks from just starting mozilla and
exiting in my own build:

--NEW-LEAKS-----------------------------------leaks------leaks%-----------------------
nsStdURL                                          4          -
nsXULElement                                     80          -
nsGenericFactory                                 20          -
RDFServiceImpl                                   60          -
nsDOMWindowList                                  24          -
nsAuthURLParser                                  12          -
LocationImpl                                     28          -
AtomImpl                                        880     189.47%
nsCodebasePrincipal                             120     100.00%
NameSpaceManagerImpl                             24     100.00%
nsAggregatePrincipal                            144     100.00%
GlobalWindowImpl                                732      50.00%
nsVoidArray                                     120      25.00%
nsStr                                           500      13.64%

The change (which was for bug 27289) is:
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&subdir=mozilla/themes/classic/global/win&command=DIFF_FRAMESET&file=classicBindings.xml&rev1=1.24&rev2=1.25&root=/cvsroot
This turns out to be a one-liner in a checkin by mstoltz from a few weeks ago.
It may even be what's causing the leaks to oscillate.
Assignee: hyatt → dbaron
Component: XBL → Security: CAPS
Priority: -- → P1
Whiteboard: [tind-mlk]
Target Milestone: --- → mozilla0.9
Status: NEW → ASSIGNED
r=blake
There are two more in the same file.  One of the other two was also probably
causing a leak on tinderbox.  Revised patch coming.
sr=hyatt
Looks fine to me. r-mstoltz, go ahead and check in.
Fix checked in 2001-04-16 17:12 PDT.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
This looks to me like something not easily 'testable'.

So.


Based on comments by blake, dbaron, mstoltz:

Marking VERIFIED FIXED on:
-MacOS91 2001-05-23-08-trunk
-Win98SE 2001-05-23-09-trunk
-LinRH62 2001-05-23-08-trunk
No, really...
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: