Fix leaks of global objects.  b=76091  r=mstoltz@netscape.com  sr=hyatt@netscape.com